calculator logic update 1.0

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <button class="btn">4</button>
       <button class="btn">5</button>
       <button class="btn">6</button>
-      <button class="btn">x</button>
+      <button class="btn">*</button>
       <button class="btn">3</button>
       <button class="btn">2</button>
       <button class="btn">1</button>
