--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
       <button class="btn button_equal">=</button>
     </div>
   </div>
-  <script src="script.js"></script>
+  <!-- <script src="script.js"></script> -->
+  <script type="module" src="js/main.js"></script>
 </body>
 </html>
