completed logic: square root of number 1.0

--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
       <button class="btn">00</button>
       <button class="btn">.</button>
       <button class="btn">+</button>
+      <button class="btn">√</button>
+      <button class="btn">X</button>
+      <button class="btn">()</button>
       <button class="btn button_equal">=</button>
     </div>
   </div>
