Add Logic: Take input inside bracket 1.0

--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
       <button class="btn">.</button>
       <button class="btn">+</button>
       <button class="btn">√</button>
-      <button class="btn">(</button>
-      <button class="btn">)</button>
+      <button class="btn">()</button>
+      <button class="btn">X</button>
       <button class="btn button_equal">=</button>
     </div>
   </div>
