show and calculate exponent 1.0

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <button class="btn">+</button>
       <button class="btn">√</button>
       <button class="btn">()</button>
-      <button class="btn">X</button>
+      <button class="btn">X<sup>□</sup></button>
       <button class="btn button_equal">=</button>
     </div>
   </div>
