Replace input tag with div and edit logic accordingly for improved display

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <div class="calculator_container">
       <h1 class="calculator_heading">Calculator</h1>
       <div class="input">
-        <input type="text" class="input_field">
+        <!-- <input type="text" class="input_field"> -->
+         <div class="input_field" contenteditable="true"></div>
       </div>
       <button class="btn button_AC">AC</button>
       <button class="btn button_Cen">Cen</button>
