make message display to show the reason

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
   <div class="container">
     <div class="calculator_container">
+      <div class="messageDiv">Message: </div>
       <h1 class="calculator_heading">Calculator</h1>
       <div class="input">
         <!-- <input type="text" class="input_field"> -->
